# cryxtal-castor

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cryxtal-base/: Cargo.toml
crates/cryxtal-base/src/: lib.rs
crates/cryxtal-bim/: Cargo.toml
crates/cryxtal-bim/src/: lib.rs
crates/cryxtal-cli/: Cargo.toml
crates/cryxtal-cli/src/: main.rs
crates/cryxtal-geometry/: Cargo.toml
crates/cryxtal-geometry/src/: lib.rs
crates/cryxtal-io/: Cargo.toml
crates/cryxtal-io/src/: ifc.rs  lib.rs  mesh.rs  step.rs
crates/cryxtal-io/tests/: io.rs
crates/cryxtal-shapeops/: Cargo.toml
crates/cryxtal-shapeops/src/: lib.rs
crates/cryxtal-topology/: Cargo.toml
crates/cryxtal-topology/src/: lib.rs
crates/cryxtal-topology/tests/: box.rs
crates/cryxtal-view/: Cargo.toml
crates/cryxtal-view/src/: cli.rs  headless.rs  lib.rs  main.rs
crates/cryxtal-view/src/elements/: mod.rs  opening_outline.rs  rebar.rs  wall_opening.rs
crates/cryxtal-view/src/gui/: app.rs  layers.rs  mod.rs  model.rs  params.rs
crates/cryxtal-view/src/gui/app/: hover.rs  hover_outline.rs  opening.rs  opening_params.rs  rebar.rs  rebar_params.rs  rebar_wireframe.rs
crates/cryxtal-view/src/viewer/: axis_gizmo.rs  gizmo_renderer.rs  input.rs  math.rs  mesh.rs  mod.rs  overlay.rs  pick.rs  pivot.rs  state.rs  truck_renderer.rs  ui.rs  viewcube.rs
examples/: export_box_step.rs  plate_with_hole_to_obj.rs
