[package]
name = "cryxtal-topology"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
cryxtal-base = { path = "../cryxtal-base" }
cryxtal-geometry = { path = "../cryxtal-geometry" }
truck-base.workspace = true
truck-topology.workspace = true
truck-modeling.workspace = true
